remove index.js and add changed main in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "yaml-config"
-  , "version": "0.0.1"
+  , "version": "0.1.0"
   , "description": "Manage your node.js app configuration based on NODE_ENV, all configuration defined in yaml"
   , "keywords": []
   , "author": "Rakuraku Jyo <jyo.rakuraku@gmail.com>"
@@ -8,6 +8,6 @@
         "log": ""
       , "yaml": ""
     }
-  , "main": "index"
+  , "main": "lib/yaml-config"
   , "engines": { "node" : ">=0.4.x" }
 }
