Cleaned up the testing code, add documentation for updateConfig in the README.md. Also changed the code to use a test.yaml file instead of the example/app.yaml

--- a/package.json
+++ b/package.json
@@ -4,10 +4,17 @@
   , "description": "Manage your node.js app configuration based on NODE_ENV, all configuration defined in yaml"
   , "keywords": []
   , "author": "Rakuraku Jyo <jyo.rakuraku@gmail.com>"
+  , "scripts": {
+      "test": "mocha -R spec test/*-test.js"
+  }  
   , "dependencies": {
         "log": ""
       , "js-yaml": ""
     }
+  , "devDependencies": {
+      "mocha": "~1.12"
+    , "chai": "~1.7"
+  }
   , "main": "lib/yaml-config"
   , "engines": { "node" : ">=0.4.x" }
 }
